rundeck/rundeck-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-deployment
  namespace: rundeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      containers:
      - name: rundeck
        image: rundeck/rundeck:5.2.0
        ports:
        - containerPort: 4440

        volumeMounts:
        - name: rundeck-data
          mountPath: /home/rundeck/server/data
      volumes:
      - name: rundeck-data
        persistentVolumeClaim:
          claimName: rundeck-data-pvc
