rundeck/rundeck-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: rundeck
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
