rundeck/rundeck-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rundeck-svc
  namespace: rundeck
spec:
  selector:
    app: rundeck
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4440
