rundeck/rundeck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rundeck-ingress
  namespace: rundeck
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yoursite.com.br
    secretName: rundeck-tls
  rules:
  - host: yoursite.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rundeck-svc
              port:
                number: 80
